[FIX] theme_common: Remove shadow style for header tags with light bg
Steps to reproduce :

  - Install Website module and at step of selecting a website theme,
    choose Monglia
    (or install and activate theme manually after Website install)
  - Go to Website homepage and edit it
  - Add the `Three Columns` structure block then save

Issue :

  The titles in cards are blurry.
  Issue can be reproduced on any theme that use the css function:
  `o-theme-cfa-header-shadows`.

Solution :

  Remove shadow style for light background:
  bg-100, bg-200, bg-300, bg-400.

opw-2627163

--- a/theme_common/static/src/scss/mixins.scss
+++ b/theme_common/static/src/scss/mixins.scss
@@ -263,7 +263,7 @@
 }
 
 @mixin o-theme-cfa-header-shadows() {
-    .bg-100, .bg-200, .bg-300, .bg-400, .bg-500, .bg-600, .bg-700, .bg-800, .bg-900 {
+    .bg-500, .bg-600, .bg-700, .bg-800, .bg-900 {
         h1, h2, h3, h4, h5, h6 {
             text-shadow: 0px 2px 0px $black;
         }
